<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        android:layout_marginRight="-250dp"
        tools:layout_editor_absoluteX="-117dp"
        tools:layout_editor_absoluteY="-173dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.register.RegisterActivity">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:alpha="0"
            android:text="@string/register_lable"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="363dp"
            android:layout_height="52dp"
            android:layout_marginTop="51dp"
            android:alpha="0"
            android:background="@drawable/background_border"
            android:hint="@string/username_lable"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register" />

        <com.capstone.tastematch.ui.costumeview.EmailEditText
            android:id="@+id/edt_email"
            android:layout_width="362dp"
            android:layout_height="51dp"
            android:layout_marginTop="12dp"
            android:alpha="0"
            android:background="@drawable/background_border"
            android:hint="@string/email_lable"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <com.capstone.tastematch.ui.costumeview.PasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="362dp"
            android:layout_height="51dp"
            android:layout_marginTop="12dp"
            android:alpha="0"
            android:background="@drawable/background_border"
            android:hint="@string/password_lable"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="360dp"
            android:layout_height="47dp"
            android:layout_marginTop="22dp"
            android:alpha="0"
            android:background="@drawable/background_border"
            android:text="@string/register_lable"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:text="@string/i_having_account"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="696dp" />

        <TextView
            android:id="@+id/tv_login_here"
            android:layout_width="39dp"
            android:layout_height="20dp"
            android:layout_marginEnd="120dp"
            android:text="@string/login_lable"
            android:textColor="@color/light_blue_A200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            tools:layout_editor_absoluteY="696dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="300dp"
            android:foregroundGravity="center"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
